testsuite/tests/partial-sigs/should_compile/T12156.stderr

T12156.hs:3:14: error: Variable not in scope: v
