testsuite/tests/partial-sigs/should_compile/T12156.hs
module Main where

main = print v

